--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <a href="https://github.com/martinRenou/ToonChess"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
-    <div class="container">
+    <div class="container" style="border-color: #0003;border-style: solid;border-width: thin;">
       <img src="images/ToonChess.png" class="rounded mx-auto d-block" width="700">
       <h1 class="display-4 text-center"> 3D Chess game based on OpenGL and Stockfish </h1>
 
@@ -35,12 +35,6 @@
         <pre><code>
           mkdir build && cd build && cmake ..
           make
-        </code></pre>
-      </p>
-
-      <p>Run it!
-        <pre><code>
-          ./ToonChess
         </code></pre>
       </p>
 
