Add background for code

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
       <h2> Installation (Only linux compatible) </h2>
 
       <p> Install CMake, SFML and Stockfish:
-        <pre><code>
+        <pre style="background: #e7e7e7;"><code>
           sudo apt-get install cmake libsfml-dev stockfish
         </code></pre>
       </p>
 
       <p> Download source code:
-        <pre><code>
+        <pre style="background: #e7e7e7;"><code>
           git clone https://github.com/martinRenou/ToonChess.git
           cd ToonChess
         </code></pre>
       </p>
 
       <p> Compile ToonChess:
-        <pre><code>
+        <pre style="background: #e7e7e7;"><code>
           mkdir build && cd build && cmake ..
           make
         </code></pre>
