--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         I created meshes on [Blender](https://www.blender.org/) and exported them under ".obj" file format.
       </p>
 
-      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="martin-renou"><a class="LI-simple-link" href='https://fr.linkedin.com/in/martin-renou?trk=profile-badge'>Martin Renou</a></div>
+      <div class="d-flex justify-content-center">
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="martin-renou"><a class="LI-simple-link" href='https://fr.linkedin.com/in/martin-renou?trk=profile-badge'>Martin Renou</a></div>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
