--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <h2> Installation (Only linux compatible) </h2>
 
-      <p> Install CMake, SFML and Stockfish:
+      <p> Install <a href="https://cmake.org/">CMake</a>, <a href="https://www.sfml-dev.org/index.php">SFML</a> and <a href="https://stockfishchess.org/">Stockfish</a>:
         <pre style="background: #e7e7e7;"><code>
           sudo apt-get install cmake libsfml-dev stockfish
         </code></pre>
@@ -61,7 +61,8 @@
 
       <h3> Shadow Mapping </h3>
       <p>
-        For the shadows I used the well-known Shadow Mapping technique. A separate render is performed using a Render To Texture technique, texture in which the distance from the light is saved for each mesh (See next picture, the nearest from the light the mesh is, the darkest it is in the shadowmap). And this distance from the light can be used in the main rendering process in order to know if the currently rendered part of the mesh is hidden from the light by an other object. See [this](http://www.opengl-tutorial.org/intermediate-tutorials/tutorial-16-shadow-mapping/) tutorial if you want to learn more about it. I then used the Percentage Close Filtering technique in order to make the shadows smoother (See this [nvidia article](http://developer.download.nvidia.com/books/HTML/gpugems/gpugems_ch11.html) about PCF).
+        For the shadows I used the well-known Shadow Mapping technique. A separate render is performed using a Render To Texture technique, texture in which the distance from the light is saved for each mesh (See next picture, the nearest from the light the mesh is, the darkest it is in the shadowmap). And this distance from the light can be used in the main rendering process in order to know if the currently rendered part of the mesh is hidden from the light by an other object. See
+        <a href="http://www.opengl-tutorial.org/intermediate-tutorials/tutorial-16-shadow-mapping/">this</a> tutorial if you want to learn more about it. I then used the Percentage Close Filtering technique in order to make the shadows smoother (See this <a href="http://developer.download.nvidia.com/books/HTML/gpugems/gpugems_ch11.html">nvidia article</a> about PCF).
         <img src="images/ShadowMapping.png" class="rounded mx-auto d-block" width="700">
       </p>
 
@@ -73,12 +74,12 @@
 
       <h3> IA </h3>
       <p>
-        Developing the IA would have been too much work, and it wasn't the purpose of this project. I chose to use Stockfish for that. Stockfish runs in a subprocess, and communicates with the GUI using the [UCI protocol](http://wbec-ridderkerk.nl/html/UCIProtocol.html).
+        Developing the IA would have been too much work, and it wasn't the purpose of this project. I chose to use Stockfish for that. Stockfish runs in a subprocess, and communicates with the GUI using the <a href="http://wbec-ridderkerk.nl/html/UCIProtocol.html">UCI protocol</a>.
       </p>
 
       <h3> Meshes </h3>
       <p>
-        I created meshes on [Blender](https://www.blender.org/) and exported them under ".obj" file format.
+        I created meshes on <a href="https://www.blender.org/">Blender</a> and exported them under ".obj" file format.
       </p>
 
       <div class="d-flex justify-content-center mt-3 mb-3">
