--- a/index.html
+++ b/index.html
@@ -39,20 +39,21 @@
       </p>
 
       <h2> Why ? </h2>
-      <p>
+      <p class="text-justify">
         There is already plenty of open-source chess games, so why would I develop my own one?
-        I wanted to improve my knowledge of OpenGL and c++ programming. I am not even a chess gamer, I am just interested in real time 3D rendering. I also wanted to learn some tools like GoogleTest and Cppcheck. And here is the result, feel free to copy parts of the code for your own OpenGL projects.
+        I wanted to improve my knowledge of OpenGL and C++ programming. I am not even a chess gamer, I am just interested in real time 3D rendering. I also wanted to learn some tools like GoogleTest and Cppcheck. And here is the result, feel free to copy parts of the code for your own OpenGL projects.
       </p>
 
       <h2> How ? </h2>
       <h3> Toon Style </h3>
-      <p>
+      <p class="text-justify">
         I wanted a toon effect for my game, this effect can be performed using cel-shading technique. Instead of using "normal" enlightening, lights are computed using a threshold: if light intensity is more important than this threshold the mesh will be bright, dark otherwise. In fact in ToonChess shaders I used three thresholds, that is to say four levels of enlightening.
         <div class="d-flex mt-3 mb-3">
           <img src="images/NormalLights.png" class="rounded mx-auto d-block" width="350">
           <img src="images/CelShading.png" class="rounded mx-auto d-block" width="350">
         </div>
-
+      </p>
+      <p class="text-justify">
         I also wanted to display black borders for chess pieces. In order to explain how I did it I'll have to explain what is Backface Culling. Backface Culling is a step in the rendering in which hidden triangle faces of the mesh (not visible from the camera point of view) are sorted and not rendered in order to save computation time. Now, in order to display black borders I chose to display those "hidden triangle faces" in black and to enlarge them. It results in a nice black border effect, without the need of a filtering step (I could have used a sobel filter for example).
         <div class="d-flex mt-3 mb-3">
           <img src="images/BlackBorders.png" class="rounded mx-auto d-block" width="350">
@@ -60,25 +61,25 @@
       </p>
 
       <h3> Shadow Mapping </h3>
-      <p>
+      <p class="text-justify">
         For the shadows I used the well-known Shadow Mapping technique. A separate render is performed using a Render To Texture technique, texture in which the distance from the light is saved for each mesh (See next picture, the nearest from the light the mesh is, the darkest it is in the shadowmap). And this distance from the light can be used in the main rendering process in order to know if the currently rendered part of the mesh is hidden from the light by an other object. See
         <a href="http://www.opengl-tutorial.org/intermediate-tutorials/tutorial-16-shadow-mapping/">this</a> tutorial if you want to learn more about it. I then used the Percentage Close Filtering technique in order to make the shadows smoother (See this <a href="http://developer.download.nvidia.com/books/HTML/gpugems/gpugems_ch11.html">nvidia article</a> about PCF).
         <img src="images/ShadowMapping.png" class="rounded mx-auto d-block" width="700">
       </p>
 
       <h3> Color Picking </h3>
-      <p>
+      <p class="text-justify">
         Concerning mesh picking, I used a Color Picking technique. When a click event occurs, an other render is performed using a RTT technique, in which meshes are colored according to their positions on the grid (See next picture). The color on the clicked position of the screen is then extracted in order to know which piece on the grid has been selected. This technique is never used in video games, but it perfectly fits my needs for this project. Performance are ok because the RTT is performed only when a click event occurs.
         <img src="images/ColorPicking.png" class="rounded mx-auto d-block" width="700">
       </p>
 
       <h3> IA </h3>
-      <p>
+      <p class="text-justify">
         Developing the IA would have been too much work, and it wasn't the purpose of this project. I chose to use Stockfish for that. Stockfish runs in a subprocess, and communicates with the GUI using the <a href="http://wbec-ridderkerk.nl/html/UCIProtocol.html">UCI protocol</a>.
       </p>
 
       <h3> Meshes </h3>
-      <p>
+      <p class="text-justify">
         I created meshes on <a href="https://www.blender.org/">Blender</a> and exported them under ".obj" file format.
       </p>
 
