--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </head>
   <body>
     <a href="https://github.com/martinRenou/ToonChess"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
-    <div class="container" style="border-color: #0003;border-style: solid;border-width: thin;">
+    <div class="container" style="border-color: #0003;border-style: solid;border-width: thin;padding-right: 45px;padding-left: 45px;">
       <img src="images/ToonChess.png" class="rounded mx-auto d-block" width="700">
       <h1 class="display-4 text-center"> 3D Chess game based on OpenGL and Stockfish </h1>
 
-      <h2 class="mt-4"> Installation (Only linux compatible) </h2>
+      <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> Installation (Only linux compatible) </b></h2>
 
       <p> Install <a href="https://cmake.org/">CMake</a>, <a href="https://www.sfml-dev.org/index.php">SFML</a> and <a href="https://stockfishchess.org/">Stockfish</a>:
         <pre style="background: #e7e7e7;"><code>
@@ -38,13 +38,13 @@
         </code></pre>
       </p>
 
-      <h2 class="mt-4"> Why ? </h2>
+      <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> Why ? </b></h2>
       <p class="text-justify">
         There is already plenty of open-source chess games, so why would I develop my own one?
         I wanted to improve my knowledge of OpenGL and C++ programming. I am not even a chess gamer, I am just interested in real time 3D rendering. I also wanted to learn some tools like GoogleTest and Cppcheck. And here is the result, feel free to copy parts of the code for your own OpenGL projects.
       </p>
 
-      <h2 class="mt-4"> How ? </h2>
+      <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> How ? </b></h2>
       <h3 class="mt-3"> Toon Style </h3>
       <p class="text-justify">
         I wanted a toon effect for my game, this effect can be performed using cel-shading technique. Instead of using "normal" enlightening, lights are computed using a threshold: if light intensity is more important than this threshold the mesh will be bright, dark otherwise. In fact in ToonChess shaders I used three thresholds, that is to say four levels of enlightening.
