--- a/index.html
+++ b/index.html
@@ -82,9 +82,14 @@
       <p class="text-justify">
         I created meshes on <a href="https://www.blender.org/">Blender</a> and exported them under ".obj" file format.
       </p>
+    </div>
 
-      <div class="d-flex justify-content-center mt-3 mb-3">
-        
+    <div class="d-flex justify-content-center mt-5 mb-3">
+      <img src="images/contact_img.jpg" style="border-radius: 50%;" width="150">
+      <div class="d-flex flex-column justify-content-center ml-5">
+        <h4><b> Created by Martin Renou </b></h4>
+        <h5><a href="https://github.com/martinRenou">Github account</a></h5>
+        <h5><a href="https://linkedin.com/in/martin-renou">Linkedin account</a></h5>
       </div>
     </div>
 
