--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <a href="https://github.com/martinRenou/ToonChess"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
     <div class="container" style="border-color: #0003;border-style: solid;border-width: thin;padding-right: 45px;padding-left: 45px;">
-      <img src="images/ToonChess.png" class="rounded mx-auto d-block" width="700">
+      <img src="images/ToonChess.png" class="rounded mx-auto d-block" style="max-width: 60%;height: auto;">
       <h1 class="display-4 text-center"> 3D Chess game based on OpenGL and Stockfish </h1>
 
       <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> Installation (Only linux compatible) </b></h2>
@@ -49,14 +49,14 @@
       <p class="text-justify">
         I wanted a toon effect for my game, this effect can be performed using cel-shading technique. Instead of using "normal" enlightening, lights are computed using a threshold: if light intensity is more important than this threshold the mesh will be bright, dark otherwise. In fact in ToonChess shaders I used three thresholds, that is to say four levels of enlightening.
         <div class="d-flex mt-3 mb-3">
-          <img src="images/NormalLights.png" class="rounded mx-auto d-block" width="350">
-          <img src="images/CelShading.png" class="rounded mx-auto d-block" width="350">
+          <img src="images/NormalLights.png" class="rounded mx-auto d-block" style="max-width: 30%;height: auto;">
+          <img src="images/CelShading.png" class="rounded mx-auto d-block" style="max-width: 30%;height: auto;">
         </div>
       </p>
       <p class="text-justify">
         I also wanted to display black borders for chess pieces. In order to explain how I did it I'll have to explain what is Backface Culling. Backface Culling is a step in the rendering in which hidden triangle faces of the mesh (not visible from the camera point of view) are sorted and not rendered in order to save computation time. Now, in order to display black borders I chose to display those "hidden triangle faces" in black and to enlarge them. It results in a nice black border effect, without the need of a filtering step (I could have used a sobel filter for example).
         <div class="d-flex mt-3 mb-3">
-          <img src="images/BlackBorders.png" class="rounded mx-auto d-block" width="350">
+          <img src="images/BlackBorders.png" class="rounded mx-auto d-block" style="max-width: 30%;height: auto;">
         </div>
       </p>
 
@@ -64,13 +64,13 @@
       <p class="text-justify">
         For the shadows I used the well-known Shadow Mapping technique. A separate render is performed using a Render To Texture technique, texture in which the distance from the light is saved for each mesh (See next picture, the nearest from the light the mesh is, the darkest it is in the shadowmap). And this distance from the light can be used in the main rendering process in order to know if the currently rendered part of the mesh is hidden from the light by an other object. See
         <a href="http://www.opengl-tutorial.org/intermediate-tutorials/tutorial-16-shadow-mapping/">this</a> tutorial if you want to learn more about it. I then used the Percentage Close Filtering technique in order to make the shadows smoother (See this <a href="http://developer.download.nvidia.com/books/HTML/gpugems/gpugems_ch11.html">nvidia article</a> about PCF).
-        <img src="images/ShadowMapping.png" class="rounded mx-auto d-block" width="500">
+        <img src="images/ShadowMapping.png" class="rounded mx-auto d-block" style="max-width: 50%;height: auto;">
       </p>
 
       <h3 class="mt-3"> Color Picking </h3>
       <p class="text-justify">
         Concerning mesh picking, I used a Color Picking technique. When a click event occurs, an other render is performed using a RTT technique, in which meshes are colored according to their positions on the grid (See next picture). The color on the clicked position of the screen is then extracted in order to know which piece on the grid has been selected. This technique is never used in video games, but it perfectly fits my needs for this project. Performance are ok because the RTT is performed only when a click event occurs.
-        <img src="images/ColorPicking.png" class="rounded mx-auto d-block" width="500">
+        <img src="images/ColorPicking.png" class="rounded mx-auto d-block" style="max-width: 50%;height: auto;">
       </p>
 
       <h3 class="mt-3"> IA </h3>
@@ -85,7 +85,9 @@
     </div>
 
     <div class="d-flex justify-content-center mt-5 mb-3">
-      <img src="images/contact_img.jpg" style="border-radius: 50%;" width="150">
+      <div>
+        <img src="images/contact_img.jpg" style="border-radius: 50%;max-width: 100%;height: auto;max-height: 150px;">
+      </div>
       <div class="d-flex flex-column justify-content-center ml-5">
         <h4><b> Created by Martin Renou </b></h4>
         <h5><a href="https://github.com/martinRenou">Github account</a></h5>
