--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="d-flex justify-content-center mt-5 mb-3">
       <div>
-        <img src="images/contact_img.jpg" style="border-radius: 50%;max-width: 100%;height: auto;max-height: 150px;">
+        <img src="https://avatars3.githubusercontent.com/u/21197331?s=460&v=4" style="border-radius: 50%;max-width: 100%;height: auto;max-height: 150px;">
       </div>
       <div class="d-flex flex-column justify-content-center ml-5">
         <h4><b> Created by Martin Renou </b></h4>
