--- a/index.html
+++ b/index.html
@@ -53,10 +53,15 @@
       <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> How did I create this game? </b></h2>
       <h3 class="mt-3"> Toon Style </h3>
       <p class="text-justify">
-        I wanted a toon effect for my game, this effect can be performed using the cel-shading technique. Instead of using "normal" lighting, lights are computed using a threshold: if light intensity is more important than this threshold then the 3D-object will be bright and dark otherwise.  In ToonChess shaders, I actually used three thresholds, meaning four levels of lighting.
+        I wanted a toon effect for my game, this effect can be performed using the cel-shading technique. Instead of using "normal" lighting,
+        lights are computed using a threshold: if light intensity is more important than this threshold then the 3D-object will be bright and dark otherwise.
+        In ToonChess shaders, I actually used three thresholds, meaning four levels of lighting.
         <div class="d-inline-block" style="text-align: center;">
           <img src="images/NormalLights.png" class="rounded" style="max-width: 30%;height: auto;">
           <img src="images/CelShading.png" class="rounded" style="max-width: 30%;height: auto;">
+        </div>
+        <div class="d-flex justify-content-center">
+          <div id="3dview_container"></div>
         </div>
       </p>
       <p class="text-justify">
@@ -104,5 +109,61 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <!-- Import THREEJS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.min.js"></script>
+    <script src="website/OBJLoader.js"></script>
+
+    <!-- Define Shaders -->
+    <script id="celShadingVertexShader" type="x-shader/x-vertex">
+    varying float vLightIntensity;
+
+    uniform vec3 lightDirection;
+
+    // View/Movement/Projection matrices
+    uniform mat4 modelViewMatrix;
+		uniform mat4 projectionMatrix;
+
+    // Normal matrix
+    uniform mat3 normalMatrix;
+
+    attribute vec3 position;
+    vec3 normal;
+
+    void main(void){
+      // Compute the normal of the vertex and the light intensity
+      normal = normalMatrix * gl_Normal;
+
+      vLightIntensity = - dot(normalize(lightDirection), normalize(normal));
+
+      // The position of the vertex
+      gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+    }
+    </script>
+
+    <script id="celShadingFragmentShader" type="x-shader/x-fragment">
+    varying float vLightIntensity;
+
+    uniform vec4 color;
+
+    float getLightFactor(){
+      float factor = 0.5;
+      if(vLightIntensity > 0.8) factor = 1.0;
+      else if (vLightIntensity > 0.3) factor = 0.9;
+      else if (vLightIntensity > 0.0) factor = 0.7;
+
+      return factor;
+    }
+
+    void main(void){
+      // Compute light factor
+      float factor = getLightFactor();
+
+      gl_FragColor = color * vec4(factor, factor, factor, 1.0);
+    }
+    </script>
+
+    <!-- JavaScript for the 3D view -->
+    <script src="website/3dview.js"></script>
   </body>
 </html>
