Implement mesh selection

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
         In ToonChess shaders, I actually used three thresholds, meaning four levels of lighting.
         <div class="d-flex justify-content-center">
           <div id="3dview_container"></div>
+          <form class="ml-3">
+            <div class="form-group">
+              <label for="mesh_selector">Mesh:</label>
+              <select class="form-control" id="mesh_selector">
+                <option>King</option>
+                <option>Queen</option>
+                <option>Bishop</option>
+                <option>Knight</option>
+                <option>Rook</option>
+                <option>Pawn</option>
+              </select>
+            </div>
+          </form>
         </div>
       </p>
       <p class="text-justify">
