Reduce size by minifying threejs plugins

--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 
     <!-- Import THREEJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/90/three.min.js"></script>
-    <script src="website/OBJLoader.js"></script>
-    <script src="website/TrackballControls.js"></script>
+    <script src="website/THREEJS_plugins.js"></script>
 
     <!-- Define Shaders -->
     <script id="celShadingVertexShader" type="x-shader/x-vertex">
