Check toon_shading and blackborder by default

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
               </select>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="shading_checkbox">
+              <input class="form-check-input" type="checkbox" value="" id="shading_checkbox" checked>
               <label class="form-check-label" for="shading_checkbox">
                 Toon-Shading
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="blackborder_checkbox">
+              <input class="form-check-input" type="checkbox" value="" id="blackborder_checkbox" checked>
               <label class="form-check-label" for="blackborder_checkbox">
                 Black Border
               </label>
