--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
           </form>
         </div>
       </p>
+      <div class="alert alert-light" role="alert">
+        3D view implemented with <a href="https://threejs.org/" class="alert-link">ThreeJS</a>.
+      </div>
       <p class="text-justify">
         I also wanted to display black borders for chess pieces. In order to explain how I did it I'll have to explain what Backface Culling is. Backface Culling is a step during rendering in which triangles of the mesh are sorted between displayed triangles (visible on the screen) and hidden triangles (not visible because of camera point of view). Hidden triangles are not rendered in order to save computation time. Now, in order to display black borders I chose to display those "hidden triangles" in black and to enlarge them. It results in a nice black border effect, without the need of a filtering step (I could have used a sobel filter for example).
       </p>
