Improve 3D view sizing and resizing

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         lights are computed using a threshold: if light intensity is more important than this threshold then the 3D-object will be bright and dark otherwise.
         In ToonChess shaders, I actually used three thresholds, meaning four levels of lighting.
         <div class="d-flex justify-content-center">
-          <div id="3dview_container"></div>
-          <form class="ml-3">
+          <div class="container-fluid" style="height: 500px;" id="3dview_container"></div>
+          <form class="w-25 ml-3 mr-3">
             <div class="form-group">
               <label for="mesh_selector">Mesh:</label>
               <select class="form-control" id="mesh_selector">
