--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           wget https://github.com/bulletphysics/bullet3/archive/2.87.tar.gz
           tar -xzf 2.87.tar.gz
           cd bullet3-2.87/
-          mkdir build && cd build && cmake .. -DBUILD_EXTRAS=OFF -DBUILD_BULLET2_DEMOS=OFF -DBUILD_CPU_DEMOS=OFF -DBUILD_OPENGL3_DEMOS=OFF -DBUILD_UNIT_TESTS=OFF
+          mkdir build && cd build && cmake .. -DBUILD_EXTRAS=OFF -DBUILD_BULLET2_DEMOS=OFF -DBUILD_CPU_DEMOS=OFF -DBUILD_OPENGL3_DEMOS=OFF -DBUILD_UNIT_TESTS=OFF -DBUILD_PYBULLET=OFF
           sudo make install
           cd ..
         </code></pre>
