--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="icon" type="image/png" href="images/logo.png" />
     <title>ToonChess</title>
   </head>
   <body>
     <a href="https://github.com/martinRenou/ToonChess"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
     <div class="container" style="border-color: #0003;border-style: solid;border-width: thin;padding-right: 45px;padding-left: 45px;">
-      <img src="images/ToonChess.png" class="rounded mx-auto d-block" style="max-width: 60%;height: auto;">
+      <img src="images/logo.svg" class="rounded mx-auto d-block" style="max-width: 300px;height: auto;">
       <h1 class="display-4 text-center"> 3D Chess game based on OpenGL and Stockfish </h1>
 
       <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> Installation (linux only) </b></h2>
