Added margin to code blocks

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> Installation (linux only) </b></h2>
 
       <p> Install <a href="https://cmake.org/" class="alert-link">CMake</a>, <a href="https://www.sfml-dev.org/index.php" class="alert-link">SFML</a> and <a href="https://stockfishchess.org/" class="alert-link">Stockfish</a>:
-        <pre style="background: #e7e7e7;"><code>
+        <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
           sudo apt-get install cmake libsfml-dev stockfish
         </code></pre>
       </p>
 
       <p> Install <a href="http://bulletphysics.org/wordpress/" class="alert-link">Bullet Physics</a>:
-        <pre style="background: #e7e7e7;"><code>
+        <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
           wget https://github.com/bulletphysics/bullet3/archive/2.87.tar.gz
           tar -xzf 2.87.tar.gz
           cd bullet3-2.87/
@@ -55,21 +55,21 @@
       </p>
 
       <p> Download source code:
-        <pre style="background: #e7e7e7;"><code>
+        <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
           git clone https://github.com/martinRenou/ToonChess.git
           cd ToonChess
         </code></pre>
       </p>
 
       <p> Compile ToonChess:
-        <pre style="background: #e7e7e7;"><code>
+        <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
           mkdir build && cd build && cmake ..
           make
         </code></pre>
       </p>
 
       <p> Run it!
-        <pre style="background: #e7e7e7;"><code>
+        <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
           ./ToonChess
         </code></pre>
       </p>
