--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         I wanted chess pieces to collapse when they are taken, in order to achieve that I used <a href="http://bulletphysics.org/wordpress/">Bullet Physics</a>
         which is a well known C++ physics library. I used Blender for generating fragment meshes and Bullet Physics for real time collisions and physics simulation.
         The result was interesting but I needed a nice way to remove fragments from the view. That's why I decided to display smoke when fragments disappear.
-        I used a simple particle system for smoke, each particle has its own size, position, speed and lifetime. I first draw smoke textures on paper and vectorized them
+        I used a simple particle system for smoke, each particle has its own size, position, speed and lifetime. I first drew smoke textures on paper and vectorized them
         using <a href="https://inkscape.org/fr/">Inkscape</a>.
         <div class="d-inline-block" style="text-align: center;">
           <img src="images/queen_collapsing.gif" class="rounded" style="max-width: 30%;height: auto;">
