Replace SFML by GLFW

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
       <h2 class="mt-4" style="border-top-style: solid;border-top-color: #e7e7e7;border-top-width: thin;"><b> Installation (linux only) </b></h2>
 
-      <p> Install <a href="https://cmake.org/">CMake</a>, <a href="https://www.sfml-dev.org/index.php">SFML</a> and <a href="https://stockfishchess.org/">Stockfish</a>:
+      <p> Install <a href="https://cmake.org/">CMake</a>, <a href="https://stockfishchess.org/">Stockfish</a> and <a href="https://www.opengl.org/">OpenGL</a>:
         <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
-          <span style="color:#800000;">sudo</span> apt-get install cmake libsfml-dev stockfish
+          <span style="color:#800000;">sudo</span> apt-get install cmake stockfish xorg-dev freeglut3-dev
         </code></pre>
       </p>
 
