Build tests with travis and update README

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
         </code></pre>
       </p>
 
-      <p> Compile ToonChess:
+      <p> Install ToonChess:
         <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
           <span style="color:#0f5ccd;">mkdir</span> build <span style="color:#800000;">&&</span> cd build <span style="color:#800000;">&&</span> cmake ..
-          make
+          sudo make install
         </code></pre>
       </p>
 
       <p> Run it!
         <pre class="mr-4 ml-4" style="background: #e7e7e7;"><code>
-          ./ToonChess
+          ToonChess
         </code></pre>
       </p>
 
